# mannequins2

./: .gitignore  README.md
app/: .dockerignore  Dockerfile  main.py  pyproject.toml
app/api/v1/routers/: file.py  forgot.py  health.py  login.py  project.py  register.py  user.py
app/core/: config.py  storage.py
app/core/authentication/: auth_middleware.py  auth_token.py
app/core/mail/: mail_service.py
app/schemas/: file.py  forgot.py  project.py  user.py
app/tests/: test_health.py
